--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
 
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* margin: 0; */
+  /* padding: 0; */
+  /* box-sizing: border-box; */
   font-family: 'Montserrat', sans-serif !important;
 }
 
-img{
+img {
   max-width: 100%;
+}
+
+.dashboard_div {
+  display: flex;
+  padding: 15px 30px;
+  background: #F6F9FC;
+  min-height: 100vh;
+  gap: 12px;
+}
+
+.dashboard_div .left_dashboard {
+  width: 20%;
+  background-color: #fff;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 30px 0px rgba(170, 170, 170, 0.16);
+  padding: 15px 0;
+}
+
+.dashboard_div .right_dashboard {
+  width: 80%;
 }
