--- a/src/Container/Auth/Auth.css
+++ b/src/Container/Auth/Auth.css
@@ -1,5 +1,5 @@
 .main_login {
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('/public/images/login_bg.jpg');
     background-size: cover;
     display: flex;
@@ -31,6 +31,10 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     max-width: 420px;
     margin: auto;
+}
+
+.login_form.register_form{
+    max-width: 100%;
 }
 
 .login_form h3 {
@@ -88,11 +92,11 @@
 .login_form h6{
     text-align: center;
     font-size: 14px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .login_form h6 a{
-    color: #739b21;
+    color: #739b21 !important;
     font-weight: 600;
     text-transform: capitalize;
     cursor: pointer;
@@ -113,4 +117,24 @@
 .login_form .social_icons a{
     color: #000;
     text-decoration: none;
+}
+
+@media (max-width: 992px) {
+    .main_login .container{
+        max-width: 950px;
+    }
+}
+
+@media (max-width: 767px) {
+    .main_login .container .left_form{
+        text-align: center;
+    }
+
+    .main_login {
+        padding: 10px 0;
+    }
+
+    .login_form{
+        padding: 40px 20px;
+    }
 }
