--- a/src/Container/Pages/Form/Form.css
+++ b/src/Container/Pages/Form/Form.css
@@ -259,7 +259,7 @@
     position: relative;
 }
 
-.form_main .preview_show{
+.preview_show{
     position: absolute;
     top: 0;
     display: flex;
@@ -269,14 +269,16 @@
     background-image: #000;
     background-color: #00000078;
     height: 100%;
+    overflow: hidden;
 }
 
-.form_main .preview_show .preview_show_data{
+.preview_show .preview_show_data{
     max-width: 400px;
     position: relative;
+    min-width: 400px;
 }
 
-.form_main .preview_show .preview_show_data svg{
+.preview_show .preview_show_data .close_icon{
     color: #fff;
     position: absolute;
     right: -20px;
@@ -287,19 +289,19 @@
 
 .preview_show .preview_btn {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     gap: 10px;
-    padding: 0 10px;
+    padding: 0 0;
 }
 
 .preview_show .preview_btn button{
-    width: 50%;
+    width: 25%;
     background-color: #0094FF;
     color: #fff;
     border: none;
     padding: 7px 0;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 13px;
     border-radius: 10px;
 }
 
@@ -346,4 +348,79 @@
 .registration_form .success_btn button:last-child {
     background-color: #EEEEEE;
     color: #787878;
+}
+
+.react-pdf__Page__canvas {
+    margin: 0 auto;
+    width: 100% !important;
+    height: 500px !important;
+}
+
+.react-pdf__Page__textContent{
+    width: 100% !important;
+    height: 500px !important;
+}
+
+.pdf_chevron{
+    display: flex;
+    justify-content: end;
+    gap: 8px;
+    /* margin: 7px 0; */
+}
+
+.pdf_chevron svg{
+    color: #fff;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.react-pdf__message--error{
+    text-align: center;
+    background-color: #fff;
+    padding: 20px 10px;
+    font-weight: 600;
+}
+
+.pdf_chevron svg:first-child{
+    position: absolute;
+    left: -6%;
+    top: 40%;
+}
+
+.pdf_chevron svg:last-child{
+    position: absolute;
+    top: 40%;
+    right: -6%;
+}
+
+@media (max-width: 1050px) {
+    .announcement_div button{
+        font-size: 13px;
+        padding: 3px 5px;
+    }
+
+    .announcement_div p{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 785px) {
+    .announcement_div{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 767px) {
+    .content .make_reverse{
+        flex-direction: column-reverse;
+    }
+
+    .registration_form .heading{
+        flex-wrap: wrap;
+        gap: 5px 0;
+    }
+
+    .form_main .registration_form .heading div{
+        flex-wrap: wrap;
+    }
 }
