--- a/src/Container/Auth/Auth.css
+++ b/src/Container/Auth/Auth.css
@@ -1,6 +1,6 @@
 .main_login {
     min-height: 100vh;
-    background-image: url('/public/images/login_bg.jpg');
+    background-image: url('../../images/login_bg.jpg');
     background-size: cover;
     display: flex;
     align-items: center;
