--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,7 +14,7 @@
 
 .main_header {
     background-color: #fff;
-    padding: 3px 0;
+    padding: 7px 0;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
 }
 
@@ -29,6 +29,7 @@
 .main_header .navbar-brand>div {
     display: flex;
     align-items: center;
+    gap: 5px;
 }
 
 .main_header .navbar-brand>div p {
@@ -68,7 +69,10 @@
 }
 
 .main_header .user_detail img {
-    width: 45px;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    border-radius: 100p;
 }
 
 .overlay {
