--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -24,6 +24,31 @@
     border-right: 2px solid #739B21;
 }
 
+.logout_modal .modal-body{
+    text-align: center;
+    padding: 40px 20px;
+}
+
+.logout_modal .modal-body h3{
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.logout_modal .modal-body button{
+    width: 30%;
+    padding: 5px;
+    border: none;
+    background-color: #15a615;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 7px;
+}
+
+.logout_modal .modal-body button.no_btn{
+    background-color: red;
+}
+
 @media (max-width: 1000px) {
     .sidebar_main ul li{
         padding: 10px 5px;
