--- a/src/Container/Dashboard/Dashboard.css
+++ b/src/Container/Dashboard/Dashboard.css
@@ -90,8 +90,9 @@
     border-radius: 16px;
     background: #F7F9FB;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
-    padding: 15px;
+    padding: 0;
     margin-top: 30px;
+    position: relative;
 }
 
 .dashboard_chart h6{
@@ -134,4 +135,21 @@
 
 .dashboard_chart .line_chart{
     margin: 30px 0;
+}
+
+.overlay_coming_soon{
+    position: absolute;
+    top: 0;
+    background-color: rgb(244 247 252 / 0.8);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    color: #000;
+}
+
+.overlay_coming_soon h2{
+    font-weight: 700;
 }
