--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,6 +16,9 @@
     background-color: #fff;
     padding: 7px 0;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
+    position: fixed;
+    width: 100%;
+    z-index: 999;
 }
 
 .main_header .navbar-brand {
