--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -19,6 +19,8 @@
     position: fixed;
     width: 100%;
     z-index: 999;
+    padding-left: 20px;
+    padding-right: 10px;
 }
 
 .main_header .navbar-brand {
