--- a/src/Container/Dashboard/Dashboard.css
+++ b/src/Container/Dashboard/Dashboard.css
@@ -28,6 +28,7 @@
     border-radius: 16px;
     background: #F7F9FB;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
+    position: relative;
 }
 
 .application_table.recent_table .heading {
@@ -49,7 +50,7 @@
     border-bottom: 1px solid #787878;
 }
 
-.application_table.recent_table .heading .search_tables input {
+.application_table.recent_table .heading .search_tables .recent_search {
     border: none;
     background: transparent;
     padding-right: 10px;
@@ -57,7 +58,7 @@
     font-size: 14px;
 }
 
-.application_table.recent_table .heading .search_tables input:focus-visible {
+.application_table.recent_table .heading .search_tables .recent_search:focus-visible {
     outline: none;
 }
 
@@ -70,7 +71,7 @@
 }
 
 .application_table.recent_table .table-responsive {
-    height: 535px;
+    height: 637px;
     overflow-y: scroll;
 }
 
@@ -86,13 +87,17 @@
     background-color: transparent;
 }
 
+.main_charts{
+    position: relative;
+}
+
 .dashboard_chart {
     border-radius: 16px;
     background: #F7F9FB;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
     padding: 0;
     margin-top: 30px;
-    position: relative;
+    
 }
 
 .dashboard_chart h6{
@@ -152,4 +157,10 @@
 
 .overlay_coming_soon h2{
     font-weight: 700;
+}
+
+.show_state_div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
