print button updated

--- a/src/Container/Dashboard/Dashboard.css
+++ b/src/Container/Dashboard/Dashboard.css
@@ -42,8 +42,9 @@
 
 .application_table.recent_table .heading h6 {
     margin-bottom: 0;
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 .application_table.recent_table .heading .search_tables {
