--- a/src/Container/Dashboard/Dashboard.css
+++ b/src/Container/Dashboard/Dashboard.css
@@ -38,6 +38,8 @@
     padding: 13px 10px;
     border-bottom: 1px solid #E0E4EC;
     margin-bottom: 7px;
+    flex-wrap: wrap;
+    gap: 10px 0;
 }
 
 .application_table.recent_table .heading h6 {
@@ -64,7 +66,7 @@
 }
 
 .application_table.recent_table thead tr th {
-    text-transform: uppercase;
+    text-transform: capitalize;
     padding: 10px 5px;
     font-size: 12px;
     font-weight: 600;
@@ -72,7 +74,7 @@
 }
 
 .application_table.recent_table .table-responsive {
-    height: 637px;
+    height: 865px;
     overflow-y: scroll;
 }
 
@@ -108,7 +110,7 @@
 }
 
 .dashboard_chart .donut_chart{
-    max-width: 180px;
+    max-width: 200px;
 }
 
 .dashboard_chart .zone_wise{
