--- a/src/Container/Pages/TrackPlots/TrackPlots.css
+++ b/src/Container/Pages/TrackPlots/TrackPlots.css
@@ -13,6 +13,40 @@
     font-weight: 700;
 }
 
-.history_modal .head svg{
+.history_modal .head svg {
+    cursor: pointer;
+}
+
+.application_main .plot_table {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 15px;
+}
+
+.application_main .plot_search {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    gap: 0 4px;
+    border: 1px solid lightgray;
+    padding: 5px 12px;
+    border-radius: 5px;
+    padding: 8px 10px;
+    border: 1px solid #787878;
+}
+
+.application_main .plot_search input {
+    width: 100%;
+    border: none;
+    font-size: 13px;
+    color: #787878;
+}
+
+.application_main .plot_search input:focus-visible {
+    outline: none;
+}
+
+.application_main .plot_search svg{
     cursor: pointer;
 }
