--- a/src/Container/Dashboard/Dashboard.css
+++ b/src/Container/Dashboard/Dashboard.css
@@ -96,7 +96,7 @@
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
     padding: 0;
     margin-top: 30px;
-    
+    min-height: 350px;
 }
 
 .dashboard_chart h6{
@@ -162,4 +162,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.line_chart h5, .donut_chart h5{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 230px;
+    font-weight: 600;
 }
